# awssdk-kinesis-rust

./: Cargo.toml
crates/kinesis_client/: Cargo.toml
crates/kinesis_client/src/: lib.rs
crates/kinesis_client/src/actions/: create_record.rs  fetch_records.rs  fetch_shard_iterator.rs  fetch_stream_description.rs  mod.rs
crates/kinesis_client/src/json/: event.rs  event_wrapper.rs  mod.rs
src/: main.rs
