[package]
name = "Kinesis_Consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-kinesis = "0.19.0"
aws-types = "*"

# Provides foundational types for HTTP
http = "0.2.7"
time = "*"

tokio = { version = "1.20.1", features = ["full"] }

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.15"
features = ["env-filter"]