[package]
name = "kinesis_client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For serializing, deserializing for Agava API
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# Time crate of choice
chrono = { version = "0.4.19", features = ["serde"] }

aws-config = "0.49.0"
aws-sdk-kinesis = "0.19.0"
aws-types = "*"

# Provides foundational types for HTTP
http = "0.2.7"
time = "*"

tokio = { version = "1.20.1", features = ["full"] }

simple-error = "*"

rand = "*"